Fix navigation alignment - change from center to left
- Changed .main-navigation text-align from center to left
- Now all navigation elements (History, SaaS, Support) are left-aligned
- Consistent with rest of site's left-aligned layout

--- a/_sass/portfolio-dark-theme.scss
+++ b/_sass/portfolio-dark-theme.scss
@@ -452,7 +452,7 @@ img {
 /* Main Navigation - Simple Link List
    ========================================================================== */
 .main-navigation {
-  text-align: center;
+  text-align: left;
   padding: var(--space-8) 0;
   margin-bottom: var(--space-16);
 }
